cmake_minimum_required(VERSION 3.13)

project(fundamentals)
set(CMAKE_CXX_STANDARD 11)

add_executable(hello hello.cpp)
add_executable(numvariables numvariables.cpp)
add_executable(textvariables textvariables.cpp)
add_executable(boolvariables boolvariables.cpp)
add_executable(sunnywarm sunnywarm.cpp)
