cmake_minimum_required(VERSION 3.13)

project(fundamentals)
set(CMAKE_CXX_STANDARD 11)

add_executable(hello hello.cpp)
add_executable(numvariables numvariables.cpp)
add_executable(textvariables textvariables.cpp)
add_executable(boolvariables boolvariables.cpp)
add_executable(sunnywarm sunnywarm.cpp)
add_executable(comments comments.cpp)
add_executable(arithmetic arithmetic.cpp)
add_executable(changeisnice changeisnice.cpp)
add_executable(relational relational.cpp)
add_executable(age age.cpp)
add_executable(logical logical.cpp)
add_executable(symbolic symbolic.cpp)
add_executable(constname constname.cpp)
