cmake_minimum_required(VERSION 3.13)

project(arrays)
set(CMAKE_CXX_STANDARD 11)

add_executable(arrays arrays.cpp)
add_executable(foreach foreach.cpp)
add_executable(morearray morearray.cpp)
add_executable(arrayclass arrayclass.cpp)
add_executable(twice twice.cpp)
add_executable(vectors vectors.cpp)
add_executable(vectorp vectorp.cpp)
